fixtures/frontend/milestone-2/valid/use-member-imports/aivi/network.aivi
value http : Text = "http"
value socket : Text = "socket"
value mailbox : Text = "mailbox"

type Request A = A
type Channel A B = {
    left: A
    right: B
}

export (http, socket, Request, Channel)
