fixtures/frontend/milestone-2/invalid/duplicate-record-fields/main.aivi
type User = { name: Text }

value user:User =
    { name: "Ada", name: "Grace" }
